sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value enchange
		if(getValeur(j)<getValeur(j+1)){enchange(j,j+1)}
                                                ^